tests/integration/snapshots/integration__parse_failure__closed_curly.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
}
stderr ---
error: expected json value, found `}`
 --> stdin:1:1
  |
1 | }
  | ^
  |
help: consider adding the missing open curly brace
  |
1 | {}
  | +
