tests/integration/snapshots/integration__parse_failure__minus_sign.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
-
stdout ---

stderr ---
error: expected digit following minus sign, found no significant characters
 --> stdin:1:1
  |
1 | -
  | ^
  | |
  | minus sign found here
  |
help: insert placeholder digits after the minus sign
  |
1 | -194
  |  +++
